[gd_scene load_steps=6 format=3 uid="uid://c7d03nux4p1ax"]

[ext_resource type="StyleBox" uid="uid://l3nucxgb3c0a" path="res://resources/styles/entry_normal.tres" id="1_ij52m"]
[ext_resource type="StyleBox" uid="uid://c75qfiouf23bw" path="res://resources/styles/entry_hover.tres" id="2_nd88f"]
[ext_resource type="StyleBox" uid="uid://d2que5k8inqpx" path="res://resources/styles/entry_pressed.tres" id="3_s3rcy"]
[ext_resource type="Script" path="res://scripts/player_stats_entry.gd" id="4_v3c48"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_th2br"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.0901961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[node name="PlayerStatsEntry" type="Button"]
custom_minimum_size = Vector2(0, 32)
offset_right = 1024.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("1_ij52m")
theme_override_styles/hover = ExtResource("2_nd88f")
theme_override_styles/pressed = ExtResource("3_s3rcy")
script = ExtResource("4_v3c48")

[node name="SelectionDraw" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_th2br")

[node name="Labels" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerNameLabel" type="Label" parent="Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.5
text = "Player"
vertical_alignment = 1
clip_text = true

[node name="MatchesLabel" type="Label" parent="Labels"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
vertical_alignment = 1
clip_text = true

[node name="WinsLabel" type="Label" parent="Labels"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
vertical_alignment = 1
clip_text = true

[node name="LossesLabel" type="Label" parent="Labels"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
vertical_alignment = 1
clip_text = true

[node name="LocalScoreLabel" type="Label" parent="Labels"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
vertical_alignment = 1
clip_text = true

[node name="GlobalScoreLabel" type="Label" parent="Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
vertical_alignment = 1
clip_text = true
